--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transformer-svg": "^2.1.0",
     "playwright": "^1.51.1",
     "storybook": "^8.6.11",
     "ts-jest": "^29.3.1",
@@ -50,6 +51,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.1.1"
   },
   "eslintConfig": {
